# VoiT

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: jobs.py  settings.py
backend/app/services/: dataset_adapters.py  evaluation.py  exports.py  insights.py  link_downloads.py  media.py  parakeet.py  search_index.py  subtitles.py  webhooks.py
backend/tests/: test_dataset_adapters.py  test_evaluation.py  test_exports.py  test_insights.py  test_jobs.py  test_media.py  test_parakeet.py  test_search_index.py  test_settings.py  test_subtitles.py  test_webhooks.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: roadmap.md
frontend/: index.html  package.json
frontend/src/: ASCIIText.css  ASCIIText.tsx  App.tsx  BorderGlow.css  BorderGlow.tsx  FaultyTerminal.tsx  GlassSurface.css  GlassSurface.tsx  GlitchingTypingText.css  GlitchingTypingText.tsx  LineWaves.css  LineWaves.tsx  StaggeredMenu.css  StaggeredMenu.tsx  api.ts  styles.css  types.ts
