[project]
name = "voit-backend"
version = "0.1.0"
description = "FastAPI backend for the VoiT transcription platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "nvidia-riva-client>=2.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
